<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="score_a">0</string>
    <string name="score_b">0</string>
    <string name="point_3">+3 POINTS</string>
    <string name="point_2">+2 POINTS</string>
    <string name="free_throw">free throw</string>

    <string name="reset">reset</string>
</resources>
